UPDATE E DELETE (cliente), CRUD (Empresa e Banco)